--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -34,23 +34,34 @@
 	<!--th:object="${cliente}" hace referencia al objeto que se esta mapeando -->
 	<!--th:action="@{/form}" hace referencia a la vista desde donde se van a enviar los datos  -->
 	<form th:action="@{/form}" th:object="${cliente}" method="post">
-		<table>
-			<tr>
-				<td>Nombre</td>
-				<td><input type="text" th:field="*{nombre}" class="form-control"/></td>
-			</tr>
-			<tr>
-				<td>Apellido</td>
-				<td><input type="text" th:field="*{apellido}" class="form-control"/></td>
-			</tr>
-			<tr>
-				<td>Email</td>
-				<td><input type="email" th:field="*{email}" class="form-control"/></td>
-			</tr>
-			<tr>
-				<td><input type="submit" value="Crear Cliente" class="btn btn-primary"></td>
-			</tr>
-		</table>
+		
+			<div class="form-group row">
+				<label class="col-sm-2 col-form-label">Nombre</label>
+				<div class="col-sm-6">
+					<input type="text" th:field="*{nombre}" class="form-control"/>
+				</div>
+			</div>
+			
+			<div class="form-group row">
+				<label class="col-sm-2 col-form-label">Apellido</label>
+				<div class="col-sm-6">
+					<input type="text" th:field="*{apellido}" class="form-control"/>
+				</div>
+			</div>
+			
+			<div class="form-group row">
+				<label class="col-sm-2 col-form-label">Email</label>
+				<div class="col-sm-6">
+					<input type="email" th:field="*{email}" class="form-control"/>
+				</div>
+			</div>
+			
+			<div class="form-group">
+				<div class="col-sm-6">
+					<input type="submit" value="Crear Cliente" class="btn btn-primary">
+				</div>
+			</div>
+		
 		<input type="hidden" th:field="*{id}" />
 	</form>
 	</div>
@@ -65,5 +76,8 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 		crossorigin="anonymous"></script>
+		
+		
+		
 </body>
 </html>
