--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -27,57 +27,71 @@
 			</ul>
 		</div>
 	</nav>
+	
 	<div class="container">
-	<h1
+		<h1
 			class="text-primary border border-success border-top-0 border-left-0 border-right-0"
 			th:text="${titulo}"></h1>
-	<form th:action="@{/form}" th:object="${cliente}" method="post">
-		<!--th:errorClass="'form-control alert-danger'"...:Pinta de color rojo la caja de texto cuando hay un error en el envío del dato 
-			"form-text text-danger" ..pinta de rojo las letras del mensaje
-			 th:if="${#fields.hasErrors('nombre')}" indica el campo donde se va a pintar el mensaje
-			  th:errors="*{nombre}"> Indica el campo donde se va a generar el mensajevalidaciones  -->
+
+		<!-- Alternativa para mostrar los campos de error en la parte superior del formulario-->
+		<!-- th:object="${cliente}" para poder acceder al cliente, a los mensajes de errores, a los controles del formulario  -->
+		<div th:object="${cliente}" th:remove="tag">
+			<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+				<li th:each="err: ${#fields.errors('*')}" th:text="${err}"></li>
+			</ul>
+		</div>
+		
+		<!-- Inicio de formulario -->
+		<form th:action="@{/form}" th:object="${cliente}" method="post">
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Nombre</label>
 				<div class="col-sm-6">
-					<input type="text" th:field="*{nombre}" class="form-control" th:errorClass="'form-control alert-danger'"/>
-					<small class="form-text text-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small> 
+					<input type="text" th:field="*{nombre}" class="form-control"
+						th:errorClass="'form-control alert-danger'" /> <small
+						class="form-text text-danger"
+						th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
 				</div>
 			</div>
-			
+
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Apellido</label>
 				<div class="col-sm-6">
-					<input type="text" th:field="*{apellido}" class="form-control" th:errorClass="'form-control alert-danger'"/>
-					<small class="form-text text-danger" th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></small>
+					<input type="text" th:field="*{apellido}" class="form-control"
+						th:errorClass="'form-control alert-danger'" /> <small
+						class="form-text text-danger"
+						th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></small>
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="col-sm-2 col-form-label">Email</label>
+				<div class="col-sm-6">
+					<input type="text" placeholder="Ingrese email" th:field="*{email}"
+						class="form-control" th:errorClass="'form-control alert-danger'" />
+					<small class="form-text text-danger"
+						th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
 				</div>
 			</div>
 			
 			<div class="form-group row">
-				<label class="col-sm-2 col-form-label">Email</label>
+				<label class="col-sm-2 col-form-label">Fecha</label>
 				<div class="col-sm-6">
-					<input type="text" placeholder="Ingrese email" th:field="*{email}" class="form-control" th:errorClass="'form-control alert-danger'"/>
-					<small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
-				 </div>
-			</div>
-		<!--Creando el campo de la fecha  en la clase Cliente.java se va a quitar el método
-		prePersist() el cual generaba la fecha anteriormente, ahora la fecha se generara vía formulario -->
-		<div class="form-group row">
-			<label class="col-sm-2 col-form-label">Fecha</label>
-				<div class="col-sm-6">
-					<input type="text" placeholder="yyyy-mm-dd" th:field="*{createAt}" class="form-control" th:errorClass="'form-control alert-danger'">
-					<small class="form-text text-danger" th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
-  
+					<input type="text" placeholder="yyyy-mm-dd" th:field="*{createAt}"
+						class="form-control" th:errorClass="'form-control alert-danger'">
+					<small class="form-text text-danger"
+						th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
 				</div>
-		</div>
+			</div>
 			
 			<div class="form-group">
 				<div class="col-sm-6">
 					<input type="submit" value="Crear Cliente" class="btn btn-primary">
 				</div>
 			</div>
-		
-		<input type="hidden" th:field="*{id}" />
-	</form>
+
+			<input type="hidden" th:field="*{id}" />
+		</form>
+		<!-- Fin de la estrutura del formulario -->
 	</div>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -90,8 +104,8 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 		crossorigin="anonymous"></script>
-		
-		
-		
+
+
+
 </body>
 </html>
