--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -31,7 +31,7 @@
 		<h1
 			class="text-primary border border-success border-top-0 border-left-0 border-right-0"
 			th:text="${titulo}"></h1>
-		<a th:href="@{/form}">Crear cliente</a>
+		<p><a th:href="@{/form}" class="btn btn-success btn-xs">Crear cliente</a></p>
 		<table class="table table-striped">
 			<thead>
 				<tr>
@@ -40,6 +40,7 @@
 					<th>apellido</th>
 					<th>email</th>
 					<th>fecha</th>
+					<th>editar</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -49,6 +50,7 @@
 					<td th:text="${cliente.apellido}"></td>
 					<td th:text="${cliente.email}"></td>
 					<td th:text="${cliente.createAt}"></td>
+					<td><a class="btn btn-primary btn-xs" th:href="@{/form/} + ${cliente.id}" th:text="'editar'"></a></td>
 				</tr>
 			</tbody>
 		</table>
