--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -3,73 +3,78 @@
 <head th:replace="layout/layout :: head"></head>
 <body>
 	<header th:replace="layout/layout :: header"></header>
-	
-	<div class="container">
-		<h1
-			class="text-primary border border-success border-top-0 border-left-0 border-right-0"
-			th:text="${titulo}"></h1>
 
-		<!-- Alternativa para mostrar los campos de error en la parte superior del formulario-->
-		<!-- th:object="${cliente}" para poder acceder al cliente, a los mensajes de errores, a los controles del formulario  -->
-		<div th:object="${cliente}" th:remove="tag">
-			<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
-				<li th:each="err: ${#fields.errors('*')}" th:text="${err}"></li>
-			</ul>
+	<div class="container py-4">
+		<div class="card bg-dark text-white">
+
+			<div class="card-header" th:text="${titulo}"></div>
+			<div class="card-body">
+
+				<!-- Alternativa para mostrar los campos de error en la parte superior del formulario-->
+				<!-- th:object="${cliente}" para poder acceder al cliente, a los mensajes de errores, a los controles del formulario  -->
+				<div th:object="${cliente}" th:remove="tag">
+					<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+						<li th:each="err: ${#fields.errors('*')}" th:text="${err}"></li>
+					</ul>
+				</div>
+
+				<!-- Inicio de formulario -->
+				<form th:action="@{/form}" th:object="${cliente}" method="post">
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label">Nombre</label>
+						<div class="col-sm-6">
+							<input type="text" th:field="*{nombre}" class="form-control"
+								th:errorClass="'form-control alert-danger'" /> <small
+								class="form-text text-danger"
+								th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label">Apellido</label>
+						<div class="col-sm-6">
+							<input type="text" th:field="*{apellido}" class="form-control"
+								th:errorClass="'form-control alert-danger'" /> <small
+								class="form-text text-danger"
+								th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></small>
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label">Email</label>
+						<div class="col-sm-6">
+							<input type="text" placeholder="Ingrese email"
+								th:field="*{email}" class="form-control"
+								th:errorClass="'form-control alert-danger'" /> <small
+								class="form-text text-danger"
+								th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label">Fecha</label>
+						<div class="col-sm-6">
+							<input type="text" placeholder="yyyy-mm-dd"
+								th:field="*{createAt}" class="form-control"
+								th:errorClass="'form-control alert-danger'"> <small
+								class="form-text text-danger"
+								th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<div class="col-sm-6">
+							<input type="submit" value="Crear Cliente"
+								class="btn btn-secondary">
+						</div>
+					</div>
+				</form>
+				<!-- Fin de la estrutura del formulario -->
+			</div>
 		</div>
-		
-		<!-- Inicio de formulario -->
-		<form th:action="@{/form}" th:object="${cliente}" method="post">
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label">Nombre</label>
-				<div class="col-sm-6">
-					<input type="text" th:field="*{nombre}" class="form-control"
-						th:errorClass="'form-control alert-danger'" /> <small
-						class="form-text text-danger"
-						th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
-				</div>
-			</div>
-
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label">Apellido</label>
-				<div class="col-sm-6">
-					<input type="text" th:field="*{apellido}" class="form-control"
-						th:errorClass="'form-control alert-danger'" /> <small
-						class="form-text text-danger"
-						th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></small>
-				</div>
-			</div>
-
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label">Email</label>
-				<div class="col-sm-6">
-					<input type="text" placeholder="Ingrese email" th:field="*{email}"
-						class="form-control" th:errorClass="'form-control alert-danger'" />
-					<small class="form-text text-danger"
-						th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
-				</div>
-			</div>
-			
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label">Fecha</label>
-				<div class="col-sm-6">
-					<input type="text" placeholder="yyyy-mm-dd" th:field="*{createAt}"
-						class="form-control" th:errorClass="'form-control alert-danger'">
-					<small class="form-text text-danger"
-						th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
-				</div>
-			</div>
-			
-			<div class="form-group">
-				<div class="col-sm-6">
-					<input type="submit" value="Crear Cliente" class="btn btn-primary">
-				</div>
-			</div>
-		</form>
-		<!-- Fin de la estrutura del formulario -->
 	</div>
-	
 
-<footer th:replace="layout/layout :: footer"></footer>
+	<footer th:replace="layout/layout :: footer"></footer>
 
 </body>
 </html>
