--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -3,7 +3,7 @@
 <head th:fragment="head">
 <meta charset="UTF-8" />
 <title th:text="'Spring Boot: MVC + Thymeleaf + DATA JPA -' + ${titulo}"></title>
-<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
 
@@ -25,12 +25,19 @@
 				</ul>
 			</div>
 		</nav>
+
+        <!--Configurando dentro de div mensajes que se mostraran cuando se ejecute algún succeso como: crear, eliminar, editar o guardar  -->
+		<div class="alert alert-success" th:if="${success !=null}" th:text="${success}"></div>
+		<div class="alert alert-danger" th:if="${error !=null}"  th:text="${error}"></div>
+		<div class="alert alert-warning" th:if="${warning !=null}"  th:text="${warning}"></div>
+		<div class="alert alert-info" th:if="${info !=null}"  th:text="${info}"></div>
+
 	</header>
 	<div class="container"></div>
 	<footer th:fragment="footer" class="container">
-		
+
 		<hr />
-		<img th:src="@{/images/1spring.png}" alt="Spring logo"/>
+		<img th:src="@{/images/1spring.png}" alt="Spring logo" />
 		<p>
 			Powered by <a href="https://projects.spring.io/spring-boot/">Spring
 				Boot</a> y <a href="http://www.thymeleaf.org">Thymeleaf</a>.
