--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -26,11 +26,14 @@
 			</div>
 		</nav>
 
-        <!--Configurando dentro de div mensajes que se mostraran cuando se ejecute algún succeso como: crear, eliminar, editar o guardar  -->
-		<div class="alert alert-success" th:if="${success !=null}" th:text="${success}"></div>
-		<div class="alert alert-danger" th:if="${error !=null}"  th:text="${error}"></div>
-		<div class="alert alert-warning" th:if="${warning !=null}"  th:text="${warning}"></div>
-		<div class="alert alert-info" th:if="${info !=null}"  th:text="${info}"></div>
+		<!--Configurando dentro de div mensajes que se mostraran cuando se ejecute algún succeso como: crear, eliminar, editar o guardar  -->
+		<div class="alert alert-success" th:if="${success !=null}"
+			th:text="${success}"></div>
+		<div class="alert alert-danger" th:if="${error !=null}"
+			th:text="${error}"></div>
+		<div class="alert alert-warning" th:if="${warning !=null}"
+			th:text="${warning}"></div>
+		<div class="alert alert-info" th:if="${info !=null}" th:text="${info}"></div>
 
 	</header>
 	<div class="container"></div>
