--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -19,7 +19,7 @@
 				</div>
 
 				<!-- Inicio de formulario -->
-				<form th:action="@{/form}" th:object="${cliente}" method="post">
+				<form th:action="@{/form}" th:object="${cliente}" method="post" enctype="multipart/form-data">
 					<div class="form-group row">
 						<label class="col-sm-2 col-form-label">Nombre</label>
 						<div class="col-sm-6">
