--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -21,7 +21,7 @@
 				<!-- Inicio de formulario -->
 				<form th:action="@{/form}" th:object="${cliente}" method="post" enctype="multipart/form-data">
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Nombre</label>
+						<label for="nombre" class="col-sm-2 col-form-label">Nombre</label>
 						<div class="col-sm-6">
 							<input type="text" th:field="*{nombre}" class="form-control"
 								th:errorClass="'form-control alert-danger'" /> <small
@@ -31,7 +31,7 @@
 					</div>
 
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Apellido</label>
+						<label for="apellido" class="col-sm-2 col-form-label">Apellido</label>
 						<div class="col-sm-6">
 							<input type="text" th:field="*{apellido}" class="form-control"
 								th:errorClass="'form-control alert-danger'" /> <small
@@ -41,7 +41,7 @@
 					</div>
 
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Email</label>
+						<label for="email" class="col-sm-2 col-form-label">Email</label>
 						<div class="col-sm-6">
 							<input type="text" placeholder="Ingrese email"
 								th:field="*{email}" class="form-control"
@@ -52,13 +52,20 @@
 					</div>
 
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Fecha</label>
+						<label for="createAt" class="col-sm-2 col-form-label">Fecha</label>
 						<div class="col-sm-6">
 							<input type="text" placeholder="yyyy-mm-dd"
 								th:field="*{createAt}" class="form-control"
 								th:errorClass="'form-control alert-danger'"> <small
 								class="form-text text-danger"
 								th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
+						</div>
+					</div>
+					
+					<div class="form-group row">
+						<label for="file" class="col-sm-2 col-form-label">Foto</label>
+						<div class="col-sm-6">
+							<input type="file" name="file" class="form-control">
 						</div>
 					</div>
 
