--- a/src/main/resources/templates/ver.html
+++ b/src/main/resources/templates/ver.html
@@ -9,20 +9,45 @@
 
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
-			<!--th:if="${#strings.length(cliente.foto) > 0}"
+				<!--th:if="${#strings.length(cliente.foto) > 0}"
 			Condición que permite mostra la imagen si es que existe, de lo contrarío no muestra 
 			la referencía de la imagen  -->
-			<img th:if="${#strings.length(cliente.foto) > 0}" class="img-thumbnail rounded float-left"
-					style="max-width: 25%;" th:src="@{'/uploads/' + ${cliente.foto}}"
-					th:alt="${cliente.foto}" />
-			
-			<!--Lista con los datos del cliente  -->
-			<ul class="list-group">
-			<li class="list-group-item" th:text="${cliente.nombre}"></li>
-			<li class="list-group-item" th:text="${cliente.apellido}"></li>
-			<li class="list-group-item" th:text="${cliente.email}"></li>
-			<li class="list-group-item" th:text="${cliente.createAt}"></li>
-			</ul>
+				<img th:if="${#strings.length(cliente.foto) > 0}"
+					class="img-thumbnail rounded float-left" style="max-width: 25%;"
+					th:src="@{'/uploads/' + ${cliente.foto}}" th:alt="${cliente.foto}" />
+
+				<!--Lista con los datos del cliente  -->
+				<ul class="list-group">
+					<li class="list-group-item" th:text="${cliente.nombre}"></li>
+					<li class="list-group-item" th:text="${cliente.apellido}"></li>
+					<li class="list-group-item" th:text="${cliente.email}"></li>
+					<li class="list-group-item" th:text="${cliente.createAt}"></li>
+				</ul>
+
+				<div th:if="${#lists.isEmpty(cliente.facturas)}"
+					class="alert alert-info my-4"
+					th:text="'No hay facturas asignadas para el cliente ' + ${cliente.nombre} + ' ' + ${cliente.apellido}"></div>
+				
+				<table th:if="${not #lists.isEmpty(cliente.facturas)}"
+					class="table table-bordered table-striped my-4">
+					<thead class="thead-inverse">
+						<tr>
+							<th>folio</th>
+							<th>descripción</th>
+							<th>fecha</th>
+							<th>total</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="factura: ${cliente.facturas}">
+							<td th:text="${factura.id}"></td>
+							<td th:text="${factura.descripcion}"></td>
+							<td th:text="${factura.createAt}"></td>
+							<td th:text="${factura.total}"></td>
+						</tr>
+					</tbody>
+				</table>
+
 			</div>
 		</div>
 	</div>
