--- a/src/main/resources/templates/factura/form.html
+++ b/src/main/resources/templates/factura/form.html
@@ -10,8 +10,11 @@
 		<div class="card bg-light">
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
-				<h4 class="card-title"></h4>
+				<h4 class="card-title">
+						
+					<a class="btn btn-light btn-xs" th:href="@{'/ver/' + ${factura.cliente.id}}" th:text="'&laquo; volver'"></a>
 
+</h4>
 				<form th:action="@{/factura/form/}" th:object="${factura}" method="POST">
 
 					<div class="form-group row">
@@ -23,14 +26,14 @@
 					</div>
 
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label" th:text="Descripción"></label>
+						<label class="col-sm-2 col-form-label" th:text="Descripciï¿½n"></label>
 						<div class="col-sm-6">
 							<input type="text" th:field="*{descripcion}" class="form-control">
 						</div>
 					</div>
 
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label" th:text="Observación"></label>
+						<label class="col-sm-2 col-form-label" th:text="Observaciï¿½n"></label>
 						<div class="col-sm-6">
 							<textarea th:field="*{observacion}" class="form-control"></textarea>
 						</div>
