--- a/src/main/resources/templates/ver.html
+++ b/src/main/resources/templates/ver.html
@@ -5,13 +5,17 @@
 	<header th:replace="layout/layout :: header"></header>
 
 	<div class="container py-4">
-		<div class="card bg-light">
 
+		<div class="card bg-light">
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
-				<!--th:if="${#strings.length(cliente.foto) > 0}"
-			Condición que permite mostra la imagen si es que existe, de lo contrarío no muestra 
-			la referencía de la imagen  -->
+				
+				<!--Botón para crear la factura-->
+				<h4 class="card-title"> 
+					<a class="btn btn-primary btn-xs" th:href="@{'/factura/form/'+ ${cliente.id}}" 
+					th:text="'crear factura'"></a>
+				</h4>
+
 				<img th:if="${#strings.length(cliente.foto) > 0}"
 					class="img-thumbnail rounded float-left" style="max-width: 25%;"
 					th:src="@{'/uploads/' + ${cliente.foto}}" th:alt="${cliente.foto}" />
