--- a/src/main/resources/templates/factura/form.html
+++ b/src/main/resources/templates/factura/form.html
@@ -11,10 +11,11 @@
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
 				<h4 class="card-title">
-						
-					<a class="btn btn-light btn-xs" th:href="@{'/ver/' + ${factura.cliente.id}}" th:text="'&laquo; volver'"></a>
 
-</h4>
+					<a class="btn btn-light btn-xs" th:href="@{'/ver/' + ${factura.cliente.id}}"
+						th:text="'&laquo; volver'"></a>
+
+				</h4>
 				<form th:action="@{/factura/form/}" th:object="${factura}" method="POST">
 
 					<div class="form-group row">
@@ -40,13 +41,29 @@
 					</div>
 
 					<div class="form-group row">
-						<label for="buscar_producto" class="col-sm-2 col-form-label" th:text="'Buscar producto'"></label>
+						<label for="buscar_producto" class="col-sm-2 col-form-label"
+							th:text="'Buscar producto'"></label>
 						<div class="col-sm-6">
-							<input type="text" name="buscar_producto" id="buscar_producto" class="form-control">
+							<input type="text" name="buscar_producto" id="buscar_producto" class="form-control" />
 						</div>
 					</div>
 
 					<table th:replace="factura/plantilla-items :: itemsFactura"></table>
+
+					<table id="cargarItemProductos" class="table table-sm table-striped table-hover">
+						<thead>
+							<tr>
+								<th>Nombre</th>
+								<th>Precio</th>
+								<th>Cantidad</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+
+							</tr>
+						</tbody>
+					</table>
 					<div class="form-group row">
 						<div class="col-sm-6">
 							<input type="submit" th:value="${titulo}" class="btn btn-secondary" />
