--- a/src/main/resources/templates/factura/plantilla-items.html
+++ b/src/main/resources/templates/factura/plantilla-items.html
@@ -5,11 +5,11 @@
 
 	<table th:fragment="itemsFactura" class="d-none">
 		<tbody id="platillaItemsFactura">
-			<tr id="row_(ID)">
-				<td class="d-none"><input type="hidden" value="{ID}" name="item_id{}" /></td>
+			<tr id="row_{ID}">
+				<td class="d-none"><input type="hidden" value="{ID}" name="item_id[]" /></td>
 				<td>{NOMBRE}</td>
 				<td>{PRECIO}</td>
-				<td><input type="number" value="1" name="cantidad{}" id="cantidad_{ID}" 
+				<td><input type="number" value="1" name="cantidad[]" id="cantidad_{ID}" 
 					class="form-control col-sm-4" />
 				</td>
 			</tr>
