--- a/src/main/resources/templates/factura/form.html
+++ b/src/main/resources/templates/factura/form.html
@@ -26,11 +26,13 @@
 								class="form-control" disabled='disabled' />
 						</div>
 					</div>
-
+					<!--Configurando las clases de la vista para mandar los mensajes del error-->
 					<div class="form-group row">
 						<label for="descripcion" class="col-sm-2 col-form-label" th:text="'Descripción'"></label>
 						<div class="col-sm-6">
-							<input type="text" th:field="*{descripcion}" class="form-control" />
+							<input type="text" th:field="*{descripcion}" class="form-control"
+								th:errorclass="'form-control is-invalid'" />
+							<div class="'invalid-feedback''" th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}"></div>
 						</div>
 					</div>
 
