--- a/src/main/resources/templates/ver.html
+++ b/src/main/resources/templates/ver.html
@@ -10,7 +10,7 @@
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
 				
-				<!--Botón para crear la factura-->
+				<!--Botï¿½n para crear la factura-->
 				<h4 class="card-title"> 
 					<a class="btn btn-primary btn-xs" th:href="@{'/factura/form/'+ ${cliente.id}}" 
 					th:text="'crear factura'"></a>
@@ -37,9 +37,10 @@
 					<thead class="thead-inverse">
 						<tr>
 							<th>folio</th>
-							<th>descripción</th>
+							<th>descripciÃ³n</th>
 							<th>fecha</th>
 							<th>total</th>
+							<th>ver</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -48,6 +49,7 @@
 							<td th:text="${factura.descripcion}"></td>
 							<td th:text="${factura.createAt}"></td>
 							<td th:text="${factura.total}"></td>
+							<td><a class="btn btn-primary btn-xs" th:href="@{'/factura/ver/' + ${factura.id}}" th:text="'detalle'"></a></td>
 						</tr>
 					</tbody>
 				</table>
