--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="layout/layout :: head"></head>
+
 <body>
 
 	<header th:replace="layout/layout :: header"></header>
@@ -30,25 +32,25 @@
 					</thead>
 					<tbody>
 						<tr th:each="cliente: ${clientes}">
-							<td><a class="btn btn-primary btn-xs"
-								th:href="@{/ver/} + ${cliente.id}" th:text="${cliente.id}"></a></td>
+							<td><a class="btn btn-primary btn-xs" th:href="@{/ver/} + ${cliente.id}"
+									th:text="${cliente.id}"></a></td>
 							<td th:text="${cliente.nombre}"></td>
 							<td th:text="${cliente.apellido}"></td>
 							<td th:text="${cliente.email}"></td>
 							<td th:text="${cliente.createAt}"></td>
-							<td><a class="btn btn-success btn-sm"
-								th:href="@{'/factura/form/' + ${cliente.id}}"
-								th:text="'crear factura'"></a></td>
-							<td><a class="btn btn-primary btn-sm"
-								th:href="@{/form/} + ${cliente.id}" th:text="'editar'"></a></td>
-							<td><a class="btn btn-danger btn-sm"
-								th:href="@{/eliminar/} + ${cliente.id}" th:text="'eliminar'"
-								onclick="return confirm('Estás seguro que quieres eliminar?');"></a></td>
+							<td><a class="btn btn-success btn-sm" th:href="@{'/factura/form/' + ${cliente.id}}"
+									th:text="'crear factura'"></a></td>
+							<td><a class="btn btn-primary btn-sm" th:href="@{/form/} + ${cliente.id}"
+									th:text="'editar'"></a></td>
+							<td><a class="btn btn-danger btn-sm" th:href="@{/eliminar/} + ${cliente.id}"
+									th:text="'eliminar'"
+									onclick="return confirm('Estás seguro que quieres eliminar?');"></a></td>
 						</tr>
 					</tbody>
-
 				</table>
-			
+
+				<nav th:replace="paginator_nav :: paginator"></nav>
+				
 			</div>
 		</div>
 
@@ -56,4 +58,5 @@
 
 	<footer th:replace="layout/layout :: footer"></footer>
 </body>
+
 </html>
