--- a/src/main/resources/templates/factura/ver.html
+++ b/src/main/resources/templates/factura/ver.html
@@ -58,7 +58,7 @@
 					<!--Mostrar el gran total de los productos-->
 					<h5 class="float-right">Gran Total <span th:text="${factura.total}" class="badge badge-secondary"></span></h5>
 				
-					<!--Mostrar las observaciones-->
+					<!--Mostrar las observaciones corregir-->
 					<div class="card border-info mb-4" style="max-width: 20rem">
 						<div class="card-header">Observaciones</div>
 						<div class="card-body">
@@ -67,7 +67,9 @@
 						<h4 class="card-title" th:if="${#strings.isEmpty(factura.observacion)}" th:text="'No tiene observaciones'"></h4>
 						</div>
 					</div>
-				<footer th:replace="layout/layout :: footer"></footer>
+					<a th:href="@{'/ver/' + ${factura.cliente.id}}" class="btn btn-ligth btn-xs">&laquo; volver</a>
+				
+					<footer th:replace="layout/layout :: footer"></footer>
 
 			</div>
 		</div>
